# tonic-example

./: .dockerignore  Cargo.toml  README.md  base.dockerfile  skaffold.yaml
crates/client/: Cargo.toml  Dockerfile  build.rs  skaffold.yaml
crates/client/k8s/: client-deployment.yml
crates/client/src/: client.rs  main.rs
crates/server/: Cargo.toml  Dockerfile  build.rs  skaffold.yaml
crates/server/k8s/: server-deployment.yml  server-service.yml
crates/server/src/: main.rs  server.rs
proto/: addressbook.proto  greeter.proto
